--- a/examples/cv/education.tex
+++ b/examples/cv/education.tex
@@ -3,23 +3,56 @@
 %-------------------------------------------------------------------------------
 \cvsection{Education}
 
-
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
 %---------------------------------------------------------
+  \vspace{0.3cm}
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - Aug. 2017} % Date(s)
+    {\textbf{MSc in Artificial Intelligence - Computer Engineering}}
+    {Alma Mater Studiorum - University of Bologna\hspace{0.2cm}\raisebox{-0.3\height}{\includegraphics[width=0.5cm]{img/unibo-logo.png}}}
+    {Bologna, Italy} % Location
+    {Sep. 2023 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+        \item {Main Topics: Foundations of AI, Machine Learning, Data Mining, Deep Learning, Computer Vision, Natural Language Processing.}
+        \item {Technologies: Python, PyTorch, SKLearn, MiniZinc, OpenCV.}
+        \item {Awarded ERGO Scholarship.}
       \end{cvitems}
     }
 
+  \vspace{0.3cm} % Adjust the value as needed for spacing
+
+%---------------------------------------------------------
+  \cventry
+    {\textbf{BSc in Computer Engineering (110/110 cum laude)}} % Institution
+    {University of Florence \hspace{0.1cm} \raisebox{-0.3\height}{\includegraphics[width=0.5cm]{img/unifi-logo.png}}} % Degree with logo
+    {Florence, Italy} % Location
+    {Sep. 2019 - Apr. 2023} % Date(s)
+    {
+      \begin{cvitems} % Description(s) bullet points
+        \item {\textbf{Thesis}: Anomaly detection in intracardiac EGMs with dictionary learning, supervised by Prof. Paolo Frasconi.}
+        \item {Relevant Exams on: Software Engineering, Database Systems, Theoretical Computer Science, Algorithms and Data Structures.}
+        \item {Technologies: C, Java, PostgreSQL, UML.}
+        \item {Received DSU Scholarship three times.}
+      \end{cvitems}
+    }
+  
+  \vspace{0.3cm} % Adjust the value as needed for spacing
+
+%---------------------------------------------------------
+  \cventry
+    {High-School Diploma} % Degree
+    {\textbf{Liceo Scientifico Carlo Jucci}} % Institution
+    {Rieti, Italy} % Location
+    {Sep. 2014 - Jul. 2019} % Date(s)
+    {
+      \begin{cvitems} % Description(s) bullet points
+        \item {Focus on advanced mathematics, physics, and introductory programming.}
+        \item {Mathematics, Physics, Basic Programming.}
+      \end{cvitems}
+    }
 %---------------------------------------------------------
 \end{cventries}
