--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -11,28 +11,23 @@
 
 %---------------------------------------------------------
   \cvskill
-    {DevOps} % Category
-    {AWS, Docker, Kubernetes, Rancher, Vagrant, Packer, Terraform, Jenkins, CircleCI} % Skills
-
-%---------------------------------------------------------
-  \cvskill
-    {Back-end} % Category
-    {Koa, Express, Django, REST API} % Skills
-
-%---------------------------------------------------------
-  \cvskill
-    {Front-end} % Category
-    {Hugo, Redux, React, HTML5, LESS, SASS} % Skills
-
-%---------------------------------------------------------
-  \cvskill
     {Programming} % Category
-    {Node.js, Python, JAVA, OCaml, LaTeX} % Skills
+    {Python, Java, C, C++, Prolog, Minizinc} % Skills
+
+%---------------------------------------------------------
+  \cvskill
+    {Libraries} % Category
+    {OpenCV, TensorFlow, Pytorch, Scikit-learn, Numpy, Pandas, Scipy} % Skills
+
+%---------------------------------------------------------
+  \cvskill
+    {Web} % Category
+    {HTML, CSS, PHP, JavaScript, WordPress, MySQL} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Languages} % Category
-    {Korean, English, Japanese} % Skills
+    {Italian, English} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
