--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -19,7 +19,7 @@
 %-------------------------------------------------------------------------------
 % A4 paper size by default, use 'letterpaper' for US letter
 \documentclass[11pt, a4paper]{awesome-cv}
-
+\usepackage{graphicx} 
 % Configure page margins with geometry
 \geometry{left=1.4cm, top=.8cm, right=1.4cm, bottom=1.8cm, footskip=.5cm}
 
@@ -51,16 +51,19 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo{./examples/profile.png}
-\name{Claud D.}{Park}
-\position{Site Reliability Engineer{\enskip\cdotp\enskip}Software Architect}
-\address{235, World Cup buk-ro, Mapo-gu, Seoul, 03936, Republic of Korea}
+\name{Francesco}{Baiocchi}
+\position{MSc STUDENT IN AI{\enskip\cdotp\enskip}AI Engineer}
+\address{Rieti, Italy}
 
-\mobile{(+82) 10-9030-1843}
-\email{posquit0.bj@gmail.com}
+%\mobile{(+39) 328-0823642}
+\email{francesco.baiocchi2@studio.unibo.it}
+%\homepage{http://www.terminillotrekking360.it/}
+\linkedin{francesco-baiocchi-1aa2a2276}
+\github{francescobaio}
+
+
 %\dateofbirth{January 1st, 1970}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
+
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
@@ -74,23 +77,28 @@
 % \googlescholar{googlescholar-id}{}
 % \extrainfo{extra information}
 
-\quote{``Be the change that you want to see in the world."}
+\quote{``I'm the type of person that if you ask me a question and I don't know the answer, I'm gonna tell you that I don't know. But I bet you what, I know how to find the answer and I will find the answer."}
 
-
+%-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 \begin{document}
 
 % Print the header with above personal information
 % Give optional argument to change alignment(C: center, L: left, R: right)
-\makecvheader
+
+\begin{minipage}{0.10\textwidth}
+  \raisebox{2.2cm}{\includegraphics[width=2cm]{img/Picture 1.jpg}} 
+\end{minipage}
+\begin{minipage}{0.90\textwidth}
+    \makecvheader
+\end{minipage}
 
 % Print the footer with 3 arguments(<left>, <center>, <right>)
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Claud D. Park~~~·~~~Curriculum Vitae}
+  {Francesco Baiocchi~~~·~~~Curriculum Vitae}
   {\thepage}
-
 
 %-------------------------------------------------------------------------------
 %	CV/RESUME CONTENT
@@ -99,13 +107,9 @@
 \input{cv/education.tex}
 \input{cv/skills.tex}
 \input{cv/experience.tex}
-\input{cv/extracurricular.tex}
 \input{cv/honors.tex}
-\input{cv/certificates.tex}
-\input{cv/presentation.tex}
-\input{cv/writing.tex}
-\input{cv/committees.tex}
-
+\input{cv/extracurricular.tex}
 
 %-------------------------------------------------------------------------------
+
 \end{document}
