--- a/examples/resume/extracurricular.tex
+++ b/examples/resume/extracurricular.tex
@@ -10,32 +10,24 @@
 \begin{cventries}
 
 %---------------------------------------------------------
-  \cventry
-    {Core Member \& President at 2013} % Affiliation/role
-    {PoApper (Developers' Network of POSTECH)} % Organization/group
-    {Pohang, S.Korea} % Location
-    {Jun. 2010 - Jun. 2017} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Reformed the society focusing on software engineering and building network on and off campus.}
-        \item {Proposed various marketing and network activities to raise awareness.}
-      \end{cvitems}
-    }
+\cvsection{Extracurricular Activities}
 
-%---------------------------------------------------------
-  \cventry
-    {Member} % Affiliation/role
-    {PLUS (Laboratory for UNIX Security in POSTECH)} % Organization/group
-    {Pohang, S.Korea} % Location
-    {Sep. 2010 - Oct. 2011} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Gained expertise in hacking \& security areas, especially about internal of operating system based on UNIX and several exploit techniques.}
-        \item {Participated on several hacking competition and won a good award.}
-        \item {Conducted periodic security checks on overall IT system as a member of POSTECH CERT.}
-        \item {Conducted penetration testing commissioned by national agency and corporation.}
-      \end{cvitems}
-    }
+\cvevent{Chess Player}{FIDE Rated National Champion}{Chianciano, 2019}{}
+\begin{itemize}
+  \item National Champion in School Juniores Categories.
+\end{itemize}
 
+\cvevent{JA Impresa in Azione}{Best Business Plan Award}{May 2018}{Milan, Italy}
+\begin{itemize}
+  \item Participated in a project introducing students to business via mini-enterprise creation and product development.
+\end{itemize}
+
+\cvsection{Hobbies}
+
+\begin{itemize}
+  \item Amateur Photographer, Football Player, Cyclist
+  \item Chess Player
+  \item Hiking and Trekking
+\end{itemize}
 %---------------------------------------------------------
 \end{cventries}
